Wed Mar 28 21:44:20 UTC 2012  Steve Huston  <shuston@riverace.com>

        * tests/Multicast_Test.cpp: Removed the forced set_nic to "lo" for
          Linux. It's not needed with the changes from:
          Wed Mar 21 21:57:40 UTC 2012  Steve Huston  <shuston@riverace.com>

Mon Mar 26 11:27:11 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * include/makeinclude/platform_mingw32.GNU:
          Added iphlpapi

Sat Mar 24 21:53:13  UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram_Mcast.cpp (subscribe_ifs): For Windows, handle IPv6
          and IPv4 differently. The make_multicast_ifaddr() call that will end
          up being made for IPv4 wants the interface's IP address, not name.

        * bin/MakeProjectCreator/config/acedefaults.mpb:
        * bin/MakeProjectCreator/config/ipv6.mpb: Moved the lit_lib for iphlpapi
          on Windows from the IPv6 base to acedefaults. SOCK_Dgram_Mcast.cpp
          uses it for both IPv4 and IPv6 now.

Fri Mar 23 22:06:11 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/WIN32_Asynch_IO.cpp: Fixed possible heap corruption in
          ACE_SOCK_Dgram_Read_Dgram::recv(). Thank you to
          Dmytro Ovdiienko <dmitriy.ovdienko@gmail.com> for unconvering this.

        * THANKS: Added Dmytro to the Hall of Fame.

Thu Mar 22 16:23:14 UTC 2012  Steve Huston  <shuston@riverace.com>

        * ace/SOCK_Dgram_Mcast.h: Corrected the description of conditions
          under which using OPT_NULLIFACE_ALL works and neatened things up.

        * tests/Multicast_Test.cpp: Turn on IP_MULTICAST_LOOP all the time.
          This test requires it and it's not universally the default.

Thu Mar 22 13:03:46 UTC 2012  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/ARGV.cpp:
        * ace/Acceptor.cpp:
        * ace/Asynch_Acceptor.cpp:
        * ace/Cached_Connect_Strategy_T.cpp:
        * ace/Lib_Find.cpp:
        * ace/Strategies_T.cpp:
        * ace/Timer_Heap_T.cpp: