@@ -146,15 +146,21 @@ Process_Per_Connection_Logging_Server::run_master (int argc, char *argv[])
 int
 Process_Per_Connection_Logging_Server::run_worker (int, char *argv[])
 {
-  intptr_t client_handle_i = ACE_OS::atoi (argv[2]);
-  // Some compilers don't like reinterpret_casting an int to an int, so
-  // only do reinterpret_cast on Windows.
+  // The handle value is passed as a hex pointer value on Windows and a
+  // decimal number everywhere else. See ace/Process.cpp for info.
 #if defined (ACE_WIN32)
+  intptr_t client_handle_i = 0;
+#  if defined (ACE_WIN64)
+  const char *fmt = "%I64x";
+#  else
+  const char *fmt = "%x";
+#  endif /* ACE_WIN64 */
+  if (::sscanf_s (argv[2], fmt, &client_handle_i) == 0)
+    return -1;
   ACE_HANDLE client_handle =
     reinterpret_cast<ACE_HANDLE> (client_handle_i);
 #else
-  ACE_HANDLE client_handle =
-    static_cast<ACE_HANDLE> (client_handle_i);
+  ACE_HANDLE client_handle = static_cast<ACE_HANDLE> (ACE_OS::atoi (argv[2]));
 #endif /* ACE_WIN32 */
   ACE_SOCK_Stream client (client_handle);
 
